--- a/index.html
+++ b/index.html
@@ -83,18 +83,23 @@
             </ul>
           </nav>
         </div>
-        <div class="header__hero"></div>
+        <div class="header__hero">
+          <img src="./assets/me.jpg" />
+          <h1>Jonathan David García González</h1>
+          <p>Desarrollador web front-end junior</p>
+        </div>
+        <img src="./assets/hero.jpg" class="header__image--bg" alt="" />
       </header>
     </div>
     <!-- <div class="nav__activator" id="nav__activator">
-        <i class="fas fa-angle-left" id="activator__icon"></i>
+      <i class="fas fa-angle-left" id="activator__icon"></i>
+    </div>
+    <div class="hero" id="hero">
+      <div class="hero__photo-container">
+        <img src="./assets/me.jpg" />
       </div>
-       <div class="hero" id="hero">
-          <div class="hero__photo-container">
-            <img src="./assets/me.jpg" />
-          </div>
-          <p class="hero__description">
-            Desarrollador Frontend Junior, con conocimiento en backend con
+      <p class="hero__description">
+        Desarrollador Frontend Junior, con conocimiento en backend con
             Node.js y Express para la creación de API REST. Gran pasión por la
             programación y la tecnología en general. Con muchas ganas de
             aprender de otros programadores, poder compartir y aportar mis
