--- a/index.html
+++ b/index.html
@@ -91,6 +91,39 @@
         <img src="./assets/hero.jpg" class="header__image--bg" alt="" />
       </header>
     </div>
+    <section class="aboutme">
+      <div class="aboutme__description">
+        <h2>Sobre mí</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores
+          unde repellendus nesciunt, placeat sapiente nisi. Debitis voluptatibus
+          in maxime iste?
+        </p>
+        <article class="aboutme__personal">
+          <ul>
+            <li>Nombre: <span>Jonathan García González</span></li>
+            <li>Teléfono: <span>71317211</span></li>
+            <li>Nombre: <span>Jonathan David García Gonzále</span></li>
+            <li>Teléfono: <span>71317211</span></li>
+            <li>Nombre: <span>Jonathan David García Gonzále</span></li>
+            <li>Teléfono: <span>71317211</span></li>
+            <li>Nombre: <span>Jonathan David García Gonzále</span></li>
+            <li>Teléfono: <span>71317211</span></li>
+          </ul>
+        </article>
+      </div>
+      <div class="aboutme__objectives">
+        <h2>Objetivos personales</h2>
+        <ul>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        </ul>
+      </div>
+    </section>
     <!-- <div class="nav__activator" id="nav__activator">
       <i class="fas fa-angle-left" id="activator__icon"></i>
     </div>
