Style habilities and objectives

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                 <a class="nav__list-item-link" href="#main">Inicio</a>
               </li>
               <li class="nav__list-item">
+                <a class="nav__list-item-link" href="#aboutme">Sobre mí</a>
+              </li>
+              <li class="nav__list-item">
                 <a class="nav__list-item-link" href="#habilities"
                   >Habilidades</a
                 >
@@ -71,14 +74,6 @@
               </li>
               <li class="nav__list-item">
                 <a class="nav__list-item-link" href="#contact">Contacto</a>
-              </li>
-              <li class="nav__list-item">
-                <a
-                  class="nav__list-item-link"
-                  href="./assets/curriculum.pdf"
-                  target="_blank"
-                  >Curriculum</a
-                >
               </li>
             </ul>
           </nav>
@@ -91,29 +86,54 @@
         <img src="./assets/hero.jpg" class="header__image--bg" alt="" />
       </header>
     </div>
-    <section class="aboutme">
+    <section class="aboutme" id="aboutme">
       <div class="aboutme__description">
-        <h2>Sobre mí</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores
-          unde repellendus nesciunt, placeat sapiente nisi. Debitis voluptatibus
-          in maxime iste?
-        </p>
+        <h2>SOBRE MÍ</h2>
         <article class="aboutme__personal">
           <ul>
-            <li>Nombre: <span>Jonathan García González</span></li>
-            <li>Teléfono: <span>71317211</span></li>
-            <li>Nombre: <span>Jonathan David García Gonzále</span></li>
-            <li>Teléfono: <span>71317211</span></li>
-            <li>Nombre: <span>Jonathan David García Gonzále</span></li>
-            <li>Teléfono: <span>71317211</span></li>
-            <li>Nombre: <span>Jonathan David García Gonzále</span></li>
-            <li>Teléfono: <span>71317211</span></li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+            </li>
+            <li>
+              <a
+                class="nav__list-item-link"
+                href="./assets/curriculum.pdf"
+                target="_blank"
+                >Ver Curriculum</a
+              >
+            </li>
           </ul>
         </article>
       </div>
       <div class="aboutme__objectives">
-        <h2>Objetivos personales</h2>
+        <h2>OBJETIVOS</h2>
         <ul>
           <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
           <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
@@ -124,6 +144,7 @@
         </ul>
       </div>
     </section>
+
     <!-- <div class="nav__activator" id="nav__activator">
       <i class="fas fa-angle-left" id="activator__icon"></i>
     </div>
