--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   /> -->
     <title>Jonathan David García González</title>
     <script
-      src="https://kit.fontawesome.com/473d269aa9.js"
+      src="https://kit.fontawesome.com/3f6e777ff9.js"
       crossorigin="anonymous"
     ></script>
   </head>
@@ -144,7 +144,43 @@
         </ul>
       </div>
     </section>
-
+    <section class="habilities" id="habilities">
+      <h2 class="habilities__title">HABILIDADES</h2>
+      <ul>
+        <li>
+          <div><i class="fas fa-laptop-code"></i></div>
+          <h3>Desarrollo web.</h3>
+          <p>
+            Estilizar de la web con CSS. Tambien con librerías de CSS como
+            Bootstrap y NextUI.
+          </p>
+        </li>
+        <li>
+          <div><i class="fas fa-laptop-code"></i></div>
+          <h3>Desarrollo web.</h3>
+          <p>
+            Estilizar de la web con CSS. Tambien con librerías de CSS como
+            Bootstrap y NextUI.
+          </p>
+        </li>
+        <li>
+          <div><i class="fas fa-laptop-code"></i></div>
+          <h3>Desarrollo web.</h3>
+          <p>
+            Estilizar de la web con CSS. Tambien con librerías de CSS como
+            Bootstrap y NextUI.
+          </p>
+        </li>
+        <li>
+          <div><i class="fas fa-laptop-code"></i></div>
+          <h3>Desarrollo web.</h3>
+          <p>
+            Estilizar de la web con CSS. Tambien con librerías de CSS como
+            Bootstrap y NextUI.
+          </p>
+        </li>
+      </ul>
+    </section>
     <!-- <div class="nav__activator" id="nav__activator">
       <i class="fas fa-angle-left" id="activator__icon"></i>
     </div>
