--- a/index.html
+++ b/index.html
@@ -181,6 +181,259 @@
         </li>
       </ul>
     </section>
+    <section class="projects" id="projects">
+      <h2>PROYECTOS</h2>
+      <div class="projects__item">
+        <div class="projects__item-description">
+          <div class="projects__item-description-initial">
+            <h3>CHAT</h3>
+            <div class="projects__item-description-buttons">
+              <a href="https://megabyte-chat.vercel.app/" target="_blank"
+                >Ver proyecto</a
+              >
+              <a
+                href="https://github.com/jonathan-cursos/megabyte_chat"
+                target="_blank"
+                >Ver Código</a
+              >
+            </div>
+            <i class="fas fa-chevron-left"></i>
+          </div>
+          <div class="projects__item-description-secondary">
+            <p>
+              Un chat básico, en el cual enviamos y recibimos mensajes en tiempo
+              real. Ingresamos con un usuario ya creado o creamos uno, creamos
+              un chat con el usuario con el que queremos chatear, en caso de que
+              no esté, e ingresando podremos comenzar a chatear.
+            </p>
+            <h4>Tecnologías usadas:</h4>
+            <ul>
+              <li>Next.js - React.js</li>
+              <li>Styled JSX</li>
+              <li>Node.js - Express</li>
+              <li>Web sockets</li>
+              <li>Heroku</li>
+              <li>Vercel</li>
+            </ul>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </div>
+        <div class="projects__item-visuals">
+          <div class="image-cover"></div>
+          <img
+            src="./assets/projects/chat.jpg"
+            alt="Authenticate App"
+            class="project__image"
+            loading="lazy"
+          />
+        </div>
+      </div>
+      <div class="projects__item">
+        <div class="projects__item-description">
+          <div class="projects__item-description-initial">
+            <h3>CHAT</h3>
+            <div class="projects__item-description-buttons">
+              <a href="https://megabyte-chat.vercel.app/" target="_blank"
+                >Ver proyecto</a
+              >
+              <a
+                href="https://github.com/jonathan-cursos/megabyte_chat"
+                target="_blank"
+                >Ver Código</a
+              >
+            </div>
+            <i class="fas fa-chevron-left"></i>
+          </div>
+          <div class="projects__item-description-secondary">
+            <p>
+              Un chat básico, en el cual enviamos y recibimos mensajes en tiempo
+              real. Ingresamos con un usuario ya creado o creamos uno, creamos
+              un chat con el usuario con el que queremos chatear, en caso de que
+              no esté, e ingresando podremos comenzar a chatear.
+            </p>
+            <h4>Tecnologías usadas:</h4>
+            <ul>
+              <li>Next.js - React.js</li>
+              <li>Styled JSX</li>
+              <li>Node.js - Express</li>
+              <li>Web sockets</li>
+              <li>Heroku</li>
+              <li>Vercel</li>
+            </ul>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </div>
+        <div class="projects__item-visuals">
+          <div class="image-cover"></div>
+          <img
+            src="./assets/projects/chat.jpg"
+            alt="Authenticate App"
+            class="project__image"
+            loading="lazy"
+          />
+        </div>
+      </div>
+      <div class="projects__item">
+        <div class="projects__item-description">
+          <div class="projects__item-description-initial">
+            <h3>CHAT</h3>
+            <div class="projects__item-description-buttons">
+              <a href="https://megabyte-chat.vercel.app/" target="_blank"
+                >Ver proyecto</a
+              >
+              <a
+                href="https://github.com/jonathan-cursos/megabyte_chat"
+                target="_blank"
+                >Ver Código</a
+              >
+            </div>
+            <i class="fas fa-chevron-left"></i>
+          </div>
+          <div class="projects__item-description-secondary">
+            <p>
+              Un chat básico, en el cual enviamos y recibimos mensajes en tiempo
+              real. Ingresamos con un usuario ya creado o creamos uno, creamos
+              un chat con el usuario con el que queremos chatear, en caso de que
+              no esté, e ingresando podremos comenzar a chatear.
+            </p>
+            <h4>Tecnologías usadas:</h4>
+            <ul>
+              <li>Next.js - React.js</li>
+              <li>Styled JSX</li>
+              <li>Node.js - Express</li>
+              <li>Web sockets</li>
+              <li>Heroku</li>
+              <li>Vercel</li>
+            </ul>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </div>
+        <div class="projects__item-visuals">
+          <div class="image-cover"></div>
+          <img
+            src="./assets/projects/chat.jpg"
+            alt="Authenticate App"
+            class="project__image"
+            loading="lazy"
+          />
+        </div>
+      </div>
+    </section>
+    <!-- <div class="projects__item-visuals-tools">
+              <h4>Herramientas usadas</h4>
+              <ul>
+                <li>Next.js - React.js</li>
+              <li>Styled JSX para los estilos.</li>
+              <li>Node.js.</li>
+              <li>Web sockets.</li>
+              <li>MongoDB</li>
+            </ul>
+          </div>
+        </div> -->
+
+    <!-- <div class="project__item-container">
+        <img
+          src="./assets/projects/gallery.jpg"
+          alt="Gallery"
+          class="project__image"
+          loading="lazy"
+        />
+        <div class="project__description">
+          <div class="project__description-wrapper">
+            <h4>Gallery</h4>
+            <p>
+              Una aplicación básica de galería, hecha con Next.js, Node.js para
+              el backend con Multer para manejar las imagenes, y haciendo uso de
+              la librería de CSS NextUI.
+            </p>
+            <div class="project__description-buttons">
+              <a
+                href="https://davdev-gallery-nextui.vercel.app/"
+                target="_blank"
+                >Ver proyecto</a
+              >
+              <a
+                href="https://github.com/jonathangg03/davdev-gallery-nextui"
+                target="_blank"
+                >Ver Código</a
+              >
+            </div>
+          </div>
+          <div class="project__title-container">
+            <h2>GALLERY</h2>
+          </div>
+        </div>
+      </div>
+      <div class="project__item-container">
+        <img
+          src="./assets/projects/portal.jpg"
+          alt="Portal"
+          class="project__image"
+          loading="lazy"
+        />
+        <div class="project__description">
+          <div class="project__description-wrapper">
+            <h4>Portal</h4>
+            <p>
+              Este proyecto es un pequeño portal el cual es una recreación del
+              que usamos en mi trabajo actual, pero añadiendo funcionalidades y
+              rediseño. Lo más destacado es que contiene un editor de textos con
+              formato. El backend corre en Heroku, y el frontend en Firebase.
+            </p>
+            <div class="project__description-buttons">
+              <a href="https://portal-d0251.web.app/" target="_blank"
+                >Ver proyecto</a
+              >
+              <a
+                href="https://github.com/jonathangg03/portal-cesa-frontend"
+                target="_blank"
+                >Ver Código</a
+              >
+            </div>
+          </div>
+          <div class="project__title-container">
+            <h2>PORTAL</h2>
+          </div>
+        </div>
+      </div>
+      <div class="project__item-container">
+        <img
+          src="./assets/projects/authenticate.jpg"
+          alt="Authenticate App"
+          class="project__image"
+          loading="lazy"
+        />
+        <div class="project__description">
+          <div class="project__description-wrapper">
+            <h4>Authenticate App</h4>
+            <p>
+              Una aplicación que consiste en una ventana de log in en la cual se
+              implemente estrategias de ingreso local, con Google, con Twitter y
+              con Facebook, y en la cual, una vez ingresamos, podrá ver su
+              nombre, apellidos y correo. Toda la aplicación corre en Heroku.
+            </p>
+            <div class="project__description-buttons">
+              <a
+                href="https://authenticate-app-frontend.herokuapp.com/"
+                target="_blank"
+                >Ver proyecto</a
+              >
+              <a
+                href="https://github.com/jonathan-cursos/authenticate_app_frontend"
+                target="_blank"
+                >Ver Código</a
+              >
+            </div>
+          </div>
+          <div class="project__title-container">
+            <h2>AUTHENTICATE APP</h2>
+          </div>
+        </div>
+      </div>
+      <p class="visit__GH">
+        Sí quieres ver más proyectos, visita mi
+        <a href="https://github.com/jonathangg03" target="_blank">GitHub</a>
+      </p> -->
     <!-- <div class="nav__activator" id="nav__activator">
       <i class="fas fa-angle-left" id="activator__icon"></i>
     </div>
@@ -417,16 +670,7 @@
       </footer>
       </div> -->
     <script>
-      const $activator = document.getElementById('nav__activator')
-      const $nav = document.getElementById('nav')
-      const $icon = document.getElementById('activator__icon')
       const $form = document.querySelector('#form')
-
-      $activator.addEventListener('click', () => {
-        $nav.classList.toggle('show__nav')
-        $icon.classList.toggle('fa-angle-right')
-      })
-
       $form.addEventListener('submit', handleSubmit)
 
       async function handleSubmit(event) {
@@ -446,6 +690,23 @@
           )
         }
       }
+    </script>
+    <script>
+      const $initials = document.querySelectorAll(
+        '.projects__item-description-initial'
+      )
+      const $secondaries = document.querySelectorAll(
+        '.projects__item-description-secondary'
+      )
+
+      $initials.forEach((el) => {
+        el.addEventListener('click', (e) => {
+          if (e.target && e.target.tagName === 'I') {
+            console.log(e)
+            e.target.parentNode.classList.add('move-initial')
+          }
+        })
+      })
     </script>
   </body>
 </html>
