Style projects finish

--- a/index.html
+++ b/index.html
@@ -185,37 +185,39 @@
       <h2>PROYECTOS</h2>
       <div class="projects__item">
         <div class="projects__item-description">
-          <div class="projects__item-description-initial">
-            <h3>CHAT</h3>
-            <div class="projects__item-description-buttons">
-              <a href="https://megabyte-chat.vercel.app/" target="_blank"
-                >Ver proyecto</a
-              >
-              <a
-                href="https://github.com/jonathan-cursos/megabyte_chat"
-                target="_blank"
-                >Ver Código</a
-              >
+          <div class="projects__item-description-container">
+            <div class="description-initial">
+              <h3>CHAT</h3>
+              <div class="projects__item-description-buttons">
+                <a href="https://megabyte-chat.vercel.app/" target="_blank"
+                  >Ver proyecto</a
+                >
+                <a
+                  href="https://github.com/jonathan-cursos/megabyte_chat"
+                  target="_blank"
+                  >Ver Código</a
+                >
+              </div>
+              <i class="fas fa-chevron-left"></i>
             </div>
-            <i class="fas fa-chevron-left"></i>
-          </div>
-          <div class="projects__item-description-secondary">
-            <p>
-              Un chat básico, en el cual enviamos y recibimos mensajes en tiempo
-              real. Ingresamos con un usuario ya creado o creamos uno, creamos
-              un chat con el usuario con el que queremos chatear, en caso de que
-              no esté, e ingresando podremos comenzar a chatear.
-            </p>
-            <h4>Tecnologías usadas:</h4>
-            <ul>
-              <li>Next.js - React.js</li>
-              <li>Styled JSX</li>
-              <li>Node.js - Express</li>
-              <li>Web sockets</li>
-              <li>Heroku</li>
-              <li>Vercel</li>
-            </ul>
-            <i class="fas fa-chevron-right"></i>
+            <div class="description-secondary">
+              <p>
+                Un chat básico, en el cual enviamos y recibimos mensajes en
+                tiempo real. Ingresamos con un usuario ya creado o creamos uno,
+                creamos un chat con el usuario con el que queremos chatear, en
+                caso de que no esté, e ingresando podremos comenzar a chatear.
+              </p>
+              <h4>Tecnologías usadas:</h4>
+              <ul>
+                <li>Next.js - React.js</li>
+                <li>Styled JSX</li>
+                <li>Node.js - Express</li>
+                <li>Web sockets</li>
+                <li>Heroku</li>
+                <li>Vercel</li>
+              </ul>
+              <i class="fas fa-chevron-right"></i>
+            </div>
           </div>
         </div>
         <div class="projects__item-visuals">
@@ -230,37 +232,39 @@
       </div>
       <div class="projects__item">
         <div class="projects__item-description">
-          <div class="projects__item-description-initial">
-            <h3>CHAT</h3>
-            <div class="projects__item-description-buttons">
-              <a href="https://megabyte-chat.vercel.app/" target="_blank"
-                >Ver proyecto</a
-              >
-              <a
-                href="https://github.com/jonathan-cursos/megabyte_chat"
-                target="_blank"
-                >Ver Código</a
-              >
+          <div class="projects__item-description-container">
+            <div class="description-initial">
+              <h3>CHAT</h3>
+              <div class="projects__item-description-buttons">
+                <a href="https://megabyte-chat.vercel.app/" target="_blank"
+                  >Ver proyecto</a
+                >
+                <a
+                  href="https://github.com/jonathan-cursos/megabyte_chat"
+                  target="_blank"
+                  >Ver Código</a
+                >
+              </div>
+              <i class="fas fa-chevron-left"></i>
             </div>
-            <i class="fas fa-chevron-left"></i>
-          </div>
-          <div class="projects__item-description-secondary">
-            <p>
-              Un chat básico, en el cual enviamos y recibimos mensajes en tiempo
-              real. Ingresamos con un usuario ya creado o creamos uno, creamos
-              un chat con el usuario con el que queremos chatear, en caso de que
-              no esté, e ingresando podremos comenzar a chatear.
-            </p>
-            <h4>Tecnologías usadas:</h4>
-            <ul>
-              <li>Next.js - React.js</li>
-              <li>Styled JSX</li>
-              <li>Node.js - Express</li>
-              <li>Web sockets</li>
-              <li>Heroku</li>
-              <li>Vercel</li>
-            </ul>
-            <i class="fas fa-chevron-right"></i>
+            <div class="description-secondary">
+              <p>
+                Un chat básico, en el cual enviamos y recibimos mensajes en
+                tiempo real. Ingresamos con un usuario ya creado o creamos uno,
+                creamos un chat con el usuario con el que queremos chatear, en
+                caso de que no esté, e ingresando podremos comenzar a chatear.
+              </p>
+              <h4>Tecnologías usadas:</h4>
+              <ul>
+                <li>Next.js - React.js</li>
+                <li>Styled JSX</li>
+                <li>Node.js - Express</li>
+                <li>Web sockets</li>
+                <li>Heroku</li>
+                <li>Vercel</li>
+              </ul>
+              <i class="fas fa-chevron-right"></i>
+            </div>
           </div>
         </div>
         <div class="projects__item-visuals">
@@ -275,37 +279,39 @@
       </div>
       <div class="projects__item">
         <div class="projects__item-description">
-          <div class="projects__item-description-initial">
-            <h3>CHAT</h3>
-            <div class="projects__item-description-buttons">
-              <a href="https://megabyte-chat.vercel.app/" target="_blank"
-                >Ver proyecto</a
-              >
-              <a
-                href="https://github.com/jonathan-cursos/megabyte_chat"
-                target="_blank"
-                >Ver Código</a
-              >
+          <div class="projects__item-description-container">
+            <div class="description-initial">
+              <h3>CHAT</h3>
+              <div class="projects__item-description-buttons">
+                <a href="https://megabyte-chat.vercel.app/" target="_blank"
+                  >Ver proyecto</a
+                >
+                <a
+                  href="https://github.com/jonathan-cursos/megabyte_chat"
+                  target="_blank"
+                  >Ver Código</a
+                >
+              </div>
+              <i class="fas fa-chevron-left"></i>
             </div>
-            <i class="fas fa-chevron-left"></i>
-          </div>
-          <div class="projects__item-description-secondary">
-            <p>
-              Un chat básico, en el cual enviamos y recibimos mensajes en tiempo
-              real. Ingresamos con un usuario ya creado o creamos uno, creamos
-              un chat con el usuario con el que queremos chatear, en caso de que
-              no esté, e ingresando podremos comenzar a chatear.
-            </p>
-            <h4>Tecnologías usadas:</h4>
-            <ul>
-              <li>Next.js - React.js</li>
-              <li>Styled JSX</li>
-              <li>Node.js - Express</li>
-              <li>Web sockets</li>
-              <li>Heroku</li>
-              <li>Vercel</li>
-            </ul>
-            <i class="fas fa-chevron-right"></i>
+            <div class="description-secondary">
+              <p>
+                Un chat básico, en el cual enviamos y recibimos mensajes en
+                tiempo real. Ingresamos con un usuario ya creado o creamos uno,
+                creamos un chat con el usuario con el que queremos chatear, en
+                caso de que no esté, e ingresando podremos comenzar a chatear.
+              </p>
+              <h4>Tecnologías usadas:</h4>
+              <ul>
+                <li>Next.js - React.js</li>
+                <li>Styled JSX</li>
+                <li>Node.js - Express</li>
+                <li>Web sockets</li>
+                <li>Heroku</li>
+                <li>Vercel</li>
+              </ul>
+              <i class="fas fa-chevron-right"></i>
+            </div>
           </div>
         </div>
         <div class="projects__item-visuals">
@@ -693,17 +699,15 @@
     </script>
     <script>
       const $initials = document.querySelectorAll(
-        '.projects__item-description-initial'
-      )
-      const $secondaries = document.querySelectorAll(
-        '.projects__item-description-secondary'
+        '.projects__item-description-container'
       )
 
       $initials.forEach((el) => {
         el.addEventListener('click', (e) => {
           if (e.target && e.target.tagName === 'I') {
-            console.log(e)
-            e.target.parentNode.classList.add('move-initial')
+            console.log(el.children[0])
+            el.children[0].classList.toggle('move-initial')
+            el.children[1].classList.toggle('move-secondary')
           }
         })
       })
