--- a/index.html
+++ b/index.html
@@ -325,6 +325,26 @@
         </div>
       </div>
     </section>
+    <section class="contact">
+      <article class="contact__title">
+        <h3>Formulario de contacto</h3>
+        <div class="contact__title-social">
+          <ul>
+            <li><i class="fab fa-instagram"></i></li>
+          </ul>
+          <ul>
+            <li><i class="fab fa-instagram"></i></li>
+          </ul>
+          <ul>
+            <li><i class="fab fa-instagram"></i></li>
+          </ul>
+          <ul>
+            <li><i class="fab fa-instagram"></i></li>
+          </ul>
+        </div>
+      </article>
+      <form action=""></form>
+    </section>
     <!-- <div class="projects__item-visuals-tools">
               <h4>Herramientas usadas</h4>
               <ul>
