--- a/index.html
+++ b/index.html
@@ -326,24 +326,34 @@
       </div>
     </section>
     <section class="contact">
-      <article class="contact__title">
-        <h3>Formulario de contacto</h3>
-        <div class="contact__title-social">
-          <ul>
-            <li><i class="fab fa-instagram"></i></li>
-          </ul>
-          <ul>
-            <li><i class="fab fa-instagram"></i></li>
-          </ul>
-          <ul>
-            <li><i class="fab fa-instagram"></i></li>
-          </ul>
-          <ul>
-            <li><i class="fab fa-instagram"></i></li>
-          </ul>
-        </div>
-      </article>
-      <form action=""></form>
+      <h2>FORMULARIO DE CONTACTO</h2>
+      <form
+        action="https://formspree.io/f/mdoywqpd"
+        method="POST"
+        id="form"
+        class="form__item"
+      >
+        <label>
+          <p>Nombre completo</p>
+          <input type="text" required name="name" />
+        </label>
+        <label>
+          <p>Nombre de la empresa</p>
+          <input type="text" required name="company" />
+        </label>
+        <label>
+          <p>Mensaje</p>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        </label>
+        <button type="submit">Enviar</button>
+        <ul>
+          <li><i class="fab fa-instagram"></i></li>
+          <li><i class="fab fa-instagram"></i></li>
+          <li><i class="fab fa-instagram"></i></li>
+          <li><i class="fab fa-instagram"></i></li>
+        </ul>
+      </form>
+      <article class="contact__social"></article>
     </section>
     <!-- <div class="projects__item-visuals-tools">
               <h4>Herramientas usadas</h4>
