Add social media

--- a/index.html
+++ b/index.html
@@ -156,23 +156,23 @@
           </p>
         </li>
         <li>
-          <div><i class="fas fa-laptop-code"></i></div>
-          <h3>React.js</h3>
+          <div><i class="fab fa-react icon-big"></i></div>
+          <h3>SPA con React.js</h3>
           <p>
             Creación de Single Page Applications tanto con React.js como con
             Next.js
           </p>
         </li>
         <li>
-          <div><i class="fas fa-laptop-code"></i></div>
-          <h3>REST API</h3>
+          <div><i class="fab fa-node-js icon-big"></i></div>
+          <h3>REST API con Node.js</h3>
           <p>
             Creación de distintas APIs REST con Node.js, ayudandonos de
             Express.js y almacenamiento de datos en MongoDB.
           </p>
         </li>
         <li>
-          <div><i class="fas fa-laptop-code"></i></div>
+          <div><i class="fas fa-terminal"></i></div>
           <h3>Despliegue de aplicaciones</h3>
           <p>
             Desplegar APIs en Heroku, así como las aplicaciones de React.js en
@@ -352,10 +352,28 @@
         </label>
         <button type="submit">Enviar</button>
         <ul>
-          <li><i class="fab fa-instagram"></i></li>
-          <li><i class="fab fa-instagram"></i></li>
-          <li><i class="fab fa-instagram"></i></li>
-          <li><i class="fab fa-instagram"></i></li>
+          <li>
+            <a href="https://github.com/jonathangg03" target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/jona_davdev" target="_blank"
+              ><i class="fab fa-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/jonathangg_03/" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/jonathan-david-garc%C3%ADa-gonz%C3%A1lez-9529a3219/"
+              target="_blank"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+          </li>
         </ul>
       </form>
       <article class="contact__social"></article>
